GNOME Bugzilla – Bug 733281
ftp backend fails to set permissions in some cases
Last modified: 2014-07-17 16:45:58 UTC
I noticed the following output when doing a gvfs-copy to an ftp mount: Queued new job 0x226d5d0 (GVfsJobSetAttribute) -- 0 -> SITE CHMOD 100644 /path <- 0 -- 501 Invalid permissions send_reply(0x226d5d0), failed=1 (Operation unsupported) We should only send the permission bits.
Created attachment 280890 [details] [review] ftp: Only send permission bits for SITE CHMOD Some ftp servers give an error if more bits than just the permission bits are sent for SITE CHMOD so only send the permission bits.
Review of attachment 280890 [details] [review]: Looks good to me, thanks!
Pushed to master as f1dbbb14162fe458b1f374ef888ffab9e15bc1ae. Thanks for the review!