ftp: Only send permission bits for SITE CHMOD

Some ftp servers give an error if more bits than just the permission
bits are sent for SITE CHMOD so only send the permission bits.

https://bugzilla.gnome.org/show_bug.cgi?id=733281